--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ Pillow>=12.0.0
 openai>=2.9.0
 python-telegram-bot>=21.0
 PyYAML>=6.0
+lark-oapi>=1.2.0
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
 
 # For Model Deployment
 
